--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,15 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Data directories
+data/input/*
+data/interim/*
+data/output/*
+!data/input/.gitkeep
+!data/interim/.gitkeep
+!data/output/.gitkeep
+
+# Log directories  
+logs/*
+!logs/.gitkeep
