--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ dev = [
 
 [project.scripts]
 preprocess = "cell2sentence4longevity.preprocess:main"
-cleanup-tests = "tests.cleanup:main"
+cleanup-tests = "cell2sentence4longevity.cleanup:main"
 
 [build-system]
 requires = ["uv_build>=0.9.7,<0.10.0"]
