--- a/pytest.ini
+++ b/pytest.ini
@@ -8,4 +8,6 @@ addopts = -v -s --tb=short --strict-markers
 markers =
     integration: Integration tests that download and process real data
     slow: Slow tests that may take several minutes
+    batch: Batch processing tests (skipped by default, run with pytest -m batch or pytest -k test_batch)
+    extra_datasets: Additional datasets to test (skipped by default, run with pytest -m extra_datasets)
 
