--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -36,7 +36,7 @@ jobs:
             ${{ runner.os }}-uv-
       
       - name: Install dependencies
-        run: uv sync --dev
+        run: uv sync --extra dev
       
       - name: Run tests
         run: uv run pytest
